Fixes mermaid codeblocks

--- a/source/post/2024/2403.md
+++ b/source/post/2024/2403.md
@@ -147,7 +147,7 @@ void BatchSpanProcessor::NotifyCompletion(
 
 简单描述一下就是在退出阶段，首先要设置shutdown flag，然后唤醒后台线程导出数据。之后用一个 `std::condition_variable` 来等待后台线程通知导出完成。然后自己再退出，时序大概如下:
 
-```{mermaid}
+```mermaid
 sequenceDiagram
     Caller->>Caller: 采集当前待上报边界
     Background->>Background: 启动
