--- a/source/post/2025/2502.md
+++ b/source/post/2025/2502.md
@@ -192,7 +192,7 @@ make_channel() {
 stackful模式下之前没有现成的实现，为了保持使用上统一，所以需要新实现一个。
 原理和结构也类似，也是receiver和sender通过共享的context来交互。
 
-```{mermaid}
+```mermaid
 classDiagram
     stackful_channel_context <|-- stackful_channel_receiver
     stackful_channel_context <|-- stackful_channel_sender
