--- a/source/post/2025/2504.md
+++ b/source/post/2025/2504.md
@@ -633,7 +633,7 @@ long sysconf(int name) { //NOLINT: runtime/int
 
 - 对于gRPC，因为内部有io线程。所以最早我是加了个线程做同步用。后来新版本新增了async接口，可以复用gRPC的线程。于是现在统一改成gRPC async接口做数据同步，可以少一个不必要的线程开销。
 
-```{mermaid}
+```mermaid
 flowchart LR
  subgraph SDK["OTEL-CPP SDK层"]
     direction TB
@@ -662,7 +662,7 @@ flowchart LR
 
 - 对于HTTP，由于现在 [OTEL-CPP][2] 没有实现自己的event poll机制。所以复用了curl内置的poll机制（curl是支持绑定外部event poll的）。这个默认poll再Linux下是走poll接口（不是epoll），Windows上是select。我们一个Exporter通常并发度不需要太高，所以select也是足够的。但是这里需要一个额外的线程去调用poll，去做IO同步。
 
-```{mermaid}
+```mermaid
 flowchart LR
  subgraph SDK["OTEL-CPP SDK层"]
     direction TB
@@ -831,7 +831,7 @@ static bool should_sample_trace_span() {
 
 大致的采集流程如下：
 
-```{mermaid}
+```mermaid
 flowchart LR
  subgraph PullExporter["Pull模式驱动器"]
     direction LR
