--- a/source/post/2025/2506.md
+++ b/source/post/2025/2506.md
@@ -48,7 +48,7 @@ UBT（UnrealBuildTool）能检测到循环依赖，但输出的是 *ActionGraph*
 
 从工程视角看，这意味着参与链接的几个库之间存在互相依赖，导致链接顺序无法拓扑排序。
 
-```{mermaid}
+```mermaid
 flowchart LR
     A[Action #700\nLink ActorSequence.so]
     E[Action #2282\nproduce Engine.so]
@@ -129,7 +129,7 @@ UBT 日志存在以下阅读障碍：
 
 工具的处理流程如下：
 
-```{mermaid}
+```mermaid
 flowchart LR
     L["UBT Build Log"] --> P["正则解析 Action/produces/cyclic-actions"]
     P --> G["构建 ActionGraph<br/>节点=Action, 边=A depends B"]
@@ -577,7 +577,7 @@ cat build.log | python3 ue_cycle_finder.py -i -
 
 真正需要的是"哪个模块与哪个模块形成环"。脚本输出环链路和 `produces:` 后，可以得到如下模块关系：
 
-```{mermaid}
+```mermaid
 graph LR
     Engine[Engine.so] --> MovieScene[MovieScene.so]
     MovieScene --> MovieSceneTracks[MovieSceneTracks.so]
@@ -599,7 +599,7 @@ graph LR
 
 ### 1）单一简单环
 
-```{mermaid}
+```mermaid
 graph LR
     A[ModuleA] --> B[ModuleB]
     B --> C[ModuleC]
@@ -617,7 +617,7 @@ graph LR
 
 它们**共享链路** `B -> C`。
 
-```{mermaid}
+```mermaid
 graph LR
     A[ModuleA] --> B[ModuleB]
     B --> C[ModuleC]
@@ -638,7 +638,7 @@ graph LR
 
 以下示例中两个环都经过 `B -> C -> E`：
 
-```{mermaid}
+```mermaid
 graph LR
     A[ModuleA] --> B[ModuleB]
     B --> C[ModuleC]
