--- a/source/post/2025/2507.md
+++ b/source/post/2025/2507.md
@@ -40,7 +40,7 @@ type: post
 
 整个静态分析流程可以分为以下几个阶段：
 
-```{mermaid}
+```mermaid
 flowchart LR
     subgraph 准备阶段
         direction TB
@@ -347,7 +347,7 @@ CodeChecker parse -e html ./codechecker-result -o ./codechecker-html || true
 
 配置文件支持目录层级继承：
 
-```{mermaid}
+```mermaid
 flowchart TB
     A["ClangSA Plugin<br />(默认配置)"] --> B["Projects/<br />(项目级配置)"]
     B --> C["Projects/Plugins/XXX/<br />(插件级配置)"]
@@ -1148,7 +1148,7 @@ if __name__ == "__main__":
 
 #### 工作流程
 
-```{mermaid}
+```mermaid
 flowchart LR
     A[plist 诊断文件] --> B[解析 XML/plist]
     B --> C[过滤重要 checker]
@@ -2212,7 +2212,7 @@ python3 ExtractNotification.py \
 
 建议将静态分析集成到 CI/CD 流程中，实现自动化检测：
 
-```{mermaid}
+```mermaid
 flowchart LR
     subgraph CI Pipeline
         A[代码提交] --> B[构建触发]
